--- a/src/css/Components.css
+++ b/src/css/Components.css
@@ -2,12 +2,26 @@
     padding: 2rem;
 }
 
+.bio p{
+  color: black;
+}
+
 .logo {
   width: 100;
   position: absolute;
   top: 10px;
   width: 100%;
   padding: 2rem 0;
+}
+
+.julkaisut{
+    padding: 2rem;
+    background-color: var(--avara-gray);
+}
+
+.julkaisut h1, p, a {
+  color: white;
+  padding: 1.5rem;
 }
 
 .video-button {
