--- a/src/css/App.css
+++ b/src/css/App.css
@@ -19,24 +19,24 @@
 
 button {
   display: inline-block;
-  background-color: black;
-  border-radius: 100px;
-  color: #eeeeee;
+  background-color: var(--avara-white);
+  border-radius: 0px;
+  color: var(--avara-gray);
   text-align: center;
   font-size: 14px;
   text-transform: uppercase;
   padding: 1rem;
-  width: 120px;
+  width: 30vh;
   -webkit-transition: all 0.5s;
   -moz-transition: all 0.5s;
   -o-transition: all 0.5s;
   transition: all 0.5s;
   cursor: pointer;
-  margin: 5px;
   appearance: none;
+  margin: 10vh;
 }
 
 button:hover{
-  background-color: white;
-  color: black;
+  background-color: var(--avara-gray);
+  color: var(--avara-white);
 }
